# bellamem

./: .env.example  .gitignore  ARCHITECTURE.md  BENCH.md  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  PRINCIPLES.md  README.md  THEORY.md  pyproject.toml
.claude/: settings.json
.claude/commands/: bellamem-cmd.sh  bellamem.md
bella/: EXAMPLES.md  MEMORY.md  README.md  SPEC.md  VISION.md
bellamem/: __init__.py  bench.py  bench_corpus.py  cli.py  guard.py  paths.py
bellamem/adapters/: __init__.py  chat.py  claude_code.py  llm_ew.py
bellamem/core/: __init__.py  audit.py  bella.py  decay.py  embed.py  emerge.py  expand.py  gene.py  ops.py  principles.py  prune.py  replay.py  scrub.py  store.py  surprise.py  tokens.py  visualize.py
bellamem/principles/: __init__.py  classic.md
bellamem/proto/: __init__.py  __main__.py  clients.py  graph.py  ingest.py  replay.py  schema.py  store.py  viz_3d.py  viz_html.py  viz_template_3d.html  walker.py
bellamem/templates/: __init__.py  bellamem.md
bellamem/viz/: __init__.py  render3d.py  template.html
benchmarks/: README.md  v0.0.2.md  v0.0.4rc1.md  v0.1.0a.md
docs/: example.graph.json  example_session.py  index.html  scenarios.md  scenarios.py
docs/rewrite/: v0.2-spec.md  v0.3-node-plan.md  v0.3.1-web-ui-plan.md
docs/viz/: v02-3d.html  v02-cytoscape.html  v02-d3.html
scripts/: bellamem-dogfood-cron.sh  build-public-viz.sh  diff-python-vs-ts.sh
tests/: test_composites.py  test_decay.py  test_decay_store.py  test_example_session.py  test_ingest_ratification.py  test_proto.py  test_proto_viz_3d.py  test_prune.py  test_retraction_detection.py  test_scenarios.py  test_smoke.py  test_visualize.py
