[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bellamem"
version = "0.2.0"
description = "A persistent, structured memory for LLM coding agents. Solves the context window problem — retrieves decisive context for each edit under a small token budget, measurably beating flat recency, LLM compact, and classic RAG."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [
    { name = "Isaac Mao", email = "isaac.mao@gmail.com" },
]
keywords = [
    "llm",
    "agent",
    "memory",
    "context",
    "context-window",
    "bella",
    "rag",
    "claude-code",
    "cursor",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
# numpy is a hard dep because bellamem.proto.schema imports it at
# module-load time (concept embeddings). openai is a hard dep
# because the v0.2 hot path (bellamem.proto.clients) requires it —
# there's no meaningful HashEmbedder fallback for LLM classification.
# Minimal installs that want just the data structures can still
# `import bellamem.proto.schema` with only numpy; openai calls are
# lazy inside method bodies and only fire on real ingest/classify.
dependencies = [
    "numpy>=1.21",
    "openai>=1.0",
]

[project.optional-dependencies]
st = ["sentence-transformers>=2.2"]
tokens = ["tiktoken>=0.6"]
viz = ["graphviz>=0.20"]
viz3d = ["umap-learn>=0.5"]
# Legacy alias kept so existing install commands like
# `pip install bellamem[openai]` keep resolving — the dep is already
# in the core list above, so this resolves to an empty extra.
openai = []
all = [
    "sentence-transformers>=2.2",
    "tiktoken>=0.6",
    "graphviz>=0.20",
    "umap-learn>=0.5",
]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/immartian/bellamem"
Repository = "https://github.com/immartian/bellamem"
Issues = "https://github.com/immartian/bellamem/issues"
Changelog = "https://github.com/immartian/bellamem/blob/master/CHANGELOG.md"
Architecture = "https://github.com/immartian/bellamem/blob/master/ARCHITECTURE.md"

[project.scripts]
bellamem = "bellamem.cli:main"
bellamem-guard = "bellamem.guard:main"

[tool.setuptools.packages.find]
include = ["bellamem*"]

[tool.setuptools.package-data]
bellamem = ["templates/*.md", "viz/*.html", "proto/*.html", "proto/*.md"]
